Fix dropdown menu cut off custom menu

--- a/style/core.css
+++ b/style/core.css
@@ -23,7 +23,9 @@ select,input,button,textarea{font-size:0.9em;}
 #page-navigation li{list-style:none;float:left;}
 #page-navigation a{display:block;padding:5px 10px;}
 .navbutton{padding-top:6px;}
-
+/* Custom menu 
+-------------------------- */
+ul.dropdown {z-index:0;}
 /* Breadcrumb 
 --------------------------- */
 .navbar{font-size:1em;background-color:#F0F0F0;border-bottom:1px solid #DDD;margin:0;padding:0 10px;}
